--- a/style.css
+++ b/style.css
@@ -9,5 +9,189 @@ html {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
+}
 
+body {
+  font-family: Cambria, serif;
+  color: #1B2522;
+}
+
+.full-screen-header {
+  height: 100vh;
+  background-image: url(img/header_image.jpg);
+  background-size: cover;
+  background-position-x: 40%;
+  background-position-y: center;
+  color: white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1B2522;
+  padding: .5rem .1rem;
+}
+
+.nav-top {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.logo {
+  width: 5rem;
+}
+
+.nav-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+}
+
+.nav-list a {
+  text-decoration: none;
+  margin-left: 1rem;
+  color: #fff;
+}
+
+.nav-list a:hover {
+  color: #CCC;
+}
+
+.title {
+  font-size: 3rem;
+  margin: 0;
+
+}
+
+.sub-title {
+  font-size: 1.5rem;
+  margin-top: .3rem;
+  margin-bottom: 1rem;
+}
+
+.btn {
+  background-color: hsl(200, 100%, 50%);
+  color: white;
+  border-radius: 100000px;
+  padding: .25rem 1rem;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1.4rem;
+}
+
+.btn:hover, .btn:focus {
+  background-color: hsl(200, 100%, 40%);
+}
+
+.scroll-down-icon {
+  position: absolute;
+  bottom: 1rem;
+  width: 3rem;
+}
+
+.section {
+  padding: 2rem;
+}
+
+.section-title {
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  text-align: center;
+  color: #000;
+}
+
+.curriculum-grid {
+  display: grid;
+  grid-template-columns:repeat(2, minmax(auto, 45rem));
+  justify-content: center;
+  row-gap: 1rem;
+  column-gap: 5rem;
+}
+
+.curriculum-grid-item {
+  display: flex;
+  align-items: center;
+}
+
+.curriculum-grid-item img {
+  width: 5rem;
+  margin-right: 1rem;
+}
+
+.section-accent {
+  background-color: #0AF;
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /*justify-content: center;*/
+}
+
+.free-title {
+  margin: 0;
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.free-sub-title {
+  color: #fff;
+  max-width: 20rem;
+  text-align: center;
+}
+
+.form {
+  max-width: 70rem;
+  margin: 0 auto;
+}
+
+.form label {
+  color: #000;
+  font-weight: bold;
+}
+
+.form input,
+.form textarea {
+  width: 100%;
+  margin-top: .25rem;
+  margin-bottom: .75rem;
+  outline: none;
+  border: 1px solid #1B2522;
+  border-radius: .3rem;
+  padding: .5rem;
+  color: inherit;
+  font-family: inherit;
+}
+
+.form textarea {
+  resize: vertical;
+  min-height: 8rem;
+  max-height: 20rem;
+}
+
+.form input:focus,
+.form textarea:focus {
+  border-color: #0AF;
+}
+
+.btn-container {
+  /*text-align: end;*/
+  display: flex;
+  justify-content: flex-end;
+}
+
+.btn-square {
+  border-radius: .3rem;
 }
